--- a/Test.html
+++ b/Test.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Guh</title>
-    <link rel="stylesheet" href="cuh2.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
@@ -12,7 +12,7 @@
 
     <h2><p>Imagine the image of dying (you wouldn't enjoy it)</p></h2>
 
-    <h2><center><p><a href="die!.html" target="_blank">Guhhh</a></p></center></h2>
+    <h2><center><p><a href="die.html" target="_blank">Guhhh</a></p></center></h2>
 
 </body>
 </html>
