--- a/die.html
+++ b/die.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cuh</title>
-    <link rel="stylesheet" href="cuh2.css">
+    <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Agbalumo&display=swap" rel="stylesheet">
 
 </head>
@@ -19,9 +19,9 @@
         <button id="Button">Submit</button>
 
 
-        <script src="cuh3.js"></script>
+        <script src="functions.js"></script>
 
-        <h2><center><p><a href="cuh.html" target="_blank">Guhhh</a></p></center></h2>
+        <h2><center><p><a href="Test.html" target="_blank">Guhhh</a></p></center></h2>
 
 </body>
 
