got everything in center
I got the label text box and submit button in middle and centered

--- a/die.html
+++ b/die.html
@@ -14,14 +14,19 @@
 
 <body>
 
+    <h2><center><p><a href="Test.html" target="_blank">Guhhh</a></p></center></h2>
+
+    <div>
         <label id="Label">Username:</label>
         <P><input type="text" required id="Text"></P>
         <button id="Button">Submit</button>
+    </div>
+        
 
 
-        <script src="functions.js"></script>
+    <script src="functions.js"></script>
 
-        <h2><center><p><a href="Test.html" target="_blank">Guhhh</a></p></center></h2>
+    
 
 </body>
 
