--- a/Sign.html
+++ b/Sign.html
@@ -15,11 +15,9 @@
 <body>
 
     <header class="header">
-        
         <a href="#" class="Home">Home</a>
-
         <nav class="navbar">
-            <a href="Sign.html" target="_blank">Sign up</a>
+            <a href="index.html" target="_blank">Login in</a>
             <a href="about.html" target="_blank">About</a>
             <a href="#" target="_blank">Die</a>
         </nav>
@@ -29,7 +27,7 @@
         <div class="formbox">
             <div class="value">
                 <form action="">
-                    <h2>Login</h2>
+                    <h2>Sign up</h2>
                     <div class="inputbox">
                         <ion-icon name="mail-outline"></ion-icon>
                         <input type="email" required>
@@ -46,7 +44,7 @@
                         <p><label for=""><input type="checkbox">Remember me | <a href="#" target="_blank">Forgot password.</a></label></p>
                         <br>
                         
-                        <p><button class="Log">Log in</button></p>
+                        <p><button class="Log">Sign up</button></p>
                         <div class="register">
                             <p>Don't have an account? <a href="#" target="_blank">Click here</a></p>
                         </div>
