--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     </div>
 
                     <div class="forget">
-                        <p><label for=""><input type="checkbox">Remember me, <a href="#" target="_blank">Forgot password.</a></label></p>
+                        <p><label for=""><input type="checkbox">Remember me | <a href="#" target="_blank">Forgot password.</a></label></p>
                         <br>
                         
                         <p><button>Log in</button></p>
