--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         
                         <p><button class="Log">Log in</button></p>
                         <div class="register">
-                            <p>Don't have an account? <a href="#" target="_blank">Click here</a></p>
+                            <p>Don't have an account? - <a href="#" target="_blank">Click here</a></p>
                         </div>
                     </div>
                 </form>
