Changes again the 4th time
added nav bars animations sign up and about

--- a/Sign.html
+++ b/Sign.html
@@ -46,7 +46,7 @@
                         
                         <p><button class="Log">Sign up</button></p>
                         <div class="register">
-                            <p>Don't have an account? <a href="#" target="_blank">Click here</a></p>
+                            <p>Already have an account? --> <a href="index.html" target="_blank">Click here</a></p>
                         </div>
                     </div>
                 </form>
