--- a/about.html
+++ b/about.html
@@ -4,15 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Guh</title>
+    <link rel="stylesheet" href="aboutstyle.css">
 
 </head>
-<body background="/images/wallpaperflare.com_wallpaper.jpg">
+<body>
 
-    <h1><center>This is page 1000</center></h1>
+    <div class="Page">
+        <h1><center>This is page 1000</center></h1>
+    </div>
 
-    <h2><p><center>Hello there wanna know a little bit of the owner? then sure it's me: im a 13 year old person and i like to play games and i most likely play league or roblox and im pretty much a chill dude!</center></p></h2>
+    <br>
+    
+    <div class="about">
+        <h2><p><center>Hello there wanna know a little bit about the owner? then sure it's me: im a 13 year old person and i like to play games and i most likely play league or roblox and im pretty much a chill dude!</center></p></h2>
+    </div>
 
-    <h2><center><p><a href="index.html" target="_blank">Guhhh</a></p></center></h2>
+    <br>
+    
+    <div class="link">
+        <center><p><a href="index.html" target="_blank">Shortcut</a></p></center>
+    </div>
 
 </body>
 </html>
